Fix ingredients route, add auth middleware,change swagger
