# src/controllers/ingredients.js
@@ -3,7 +3,7 @@ const { asyncWrapper, responseData } = require('../helpers/apiHelpers');
 
 const getRecipeByIngredientController = async (req, res) => {
   const { value } = req.query;
-  const ingredients = await service.getRecipeByIngredient(value);
+  const ingredients = await service.getIngredients(value);
 
   res.status(200).json(
     responseData(
